# Ambiguity_Detector

./: .gitignore  CHANGES.md  check_logs.py  diag.py  diag_xai.py  package_demo.py  pyproject.toml  read_log.py  requirements.txt  run_xai_pipeline.sh  setup.sh  test_debug.py  test_refinement_live.py  unzip_in_jupyter.sh
.streamlit/: config.toml
app/: streamlit_demo.py
app/static/: styles.css
configs/: demo.yaml  few_shot_examples.yaml  infer.yaml  placeholders.yaml  refine.yaml  refinement.yaml  refinement_prompt_template.txt  structural_tokens.yaml  threshold.yaml  train.yaml  trigger_map.yaml
configs/prompts/: refine_user_story.jinja
data/augmented/: train.csv
data/processed/: test.csv  train.csv  val.csv
data/raw/: sample_multilabel.csv
schemas/: README.md  xai_output.schema.json
scripts/: augment.py  preprocess.py  train.py
src/: run_hparam_sensitivity.py  run_multiseed.py  run_xai_bridge_validation.py  run_xai_faithfulness.py  run_xai_generate_json.py  run_xai_package_artifacts.py  run_xai_refinement.py  run_xai_sample_preparation.py  run_xai_summary.py  run_xai_visualizations.py
src/debug/: test_diagnostic.py  test_prompt_assembly.py  verify_filter.py
src/req_ambiguity/: __init__.py
src/req_ambiguity/augmentation/: __init__.py  augmenter.py  policy.py
src/req_ambiguity/evaluation/: __init__.py  metrics.py  per_label_diagnostics.py  thesis_visualizations.py
src/req_ambiguity/modeling/: __init__.py  classifier.py  train.py
src/req_ambiguity/preprocessing/: __init__.py  clean.py  io.py  pipeline.py  report.py  split.py  tokenize.py
(+18 files in other folders)
