[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "req-ambiguity-prototype"
version = "0.1.0"
description = "Ambiguity-focused requirements classification and refinement prototype"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "openpyxl>=3.1",
  "torch>=2.1",
  "transformers>=4.36",
  "iterative-stratification>=0.1.7",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "sentencepiece>=0.1.99",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]
